--- a/stuff.ipynb
+++ b/stuff.ipynb
@@ -3,7 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da244afe",
+   "id": "fd2e4061",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|hide\n",
+    "from execnb.core import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "606d4baa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +22,16 @@
     "from nbprocess.sync import *\n",
     "from execnb import *\n",
     "\n",
-    "nb = read_nb('tests/clean.ipynb')\n",
-    "\n",
+    "nb = read_nb('tests/ran.ipynb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da244afe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "s = CaptureShell()\n",
     "\n",
     "for cell in nb.cells:\n",
