--- a/tests/ran.ipynb
+++ b/tests/ran.ipynb
@@ -97,18 +97,18 @@
    "outputs": [
     {
      "ename": "Exception",
-     "evalue": "",
+     "evalue": "Oopsie!",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m\n",
-      "\u001b[0;31mException\u001b[0m: "
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOopsie!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mException\u001b[0m: Oopsie!"
      ]
     }
    ],
    "source": [
-    "raise Exception"
+    "raise Exception(\"Oopsie!\")"
    ]
   }
  ],
