--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -71,6 +71,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CaptureShell -"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -78,6 +85,7 @@
    "source": [
     "#|export\n",
     "class CaptureShell(FastInteractiveShell):\n",
+    "    \"Execute the IPython/Jupyter source code\"\n",
     "    def __init__(self):\n",
     "        super().__init__(displayhook_class=_CaptureHook, display_pub_class=_CapturePub)\n",
     "        InteractiveShell._instance = self\n",
@@ -107,19 +115,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Use `CaptureShell` to execute the IPython/Jupyter source code."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "s = CaptureShell()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cells -"
    ]
   },
   {
@@ -184,8 +192,8 @@
        "  'execution_count': 1},\n",
        " {'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 2 us, sys: 0 ns, total: 2 us',\n",
-       "   'Wall time: 3.58 us']}]"
+       "  'text': ['CPU times: user 1 us, sys: 0 ns, total: 1 us',\n",
+       "   'Wall time: 3.34 us']}]"
       ]
      },
      "execution_count": null,
@@ -359,6 +367,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NBs -"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -366,10 +381,12 @@
    "source": [
     "#|export\n",
     "@patch\n",
-    "def run_all(self:CaptureShell, nb, exc_stop=False):\n",
+    "def run_all(self:CaptureShell, nb, exc_stop=False, preproc=noop, postproc=noop):\n",
     "    \"Run all cells in `nb`, stopping at first exception if `exc_stop`\"\n",
     "    for cell in nb.cells:\n",
-    "        self.cell(cell)\n",
+    "        if not preproc(cell):\n",
+    "            self.cell(cell)\n",
+    "            postproc(cell)\n",
     "        if self.exc and exc_stop: raise self.exc[1] from None"
    ]
   },
@@ -401,11 +418,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'data': {'text/plain': ['<IPython.core.display.Markdown object>'],\n",
-       "   'text/markdown': [\"This is *bold*. Here's a [link](https://www.fast.ai).\"]},\n",
-       "  'metadata': {},\n",
-       "  'output_type': 'execute_result',\n",
-       "  'execution_count': 5}]"
+       "(#0) []"
       ]
      },
      "execution_count": null,
@@ -453,13 +466,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'ename': \"<class 'Exception'>\",\n",
-       "  'evalue': 'Oopsie!',\n",
-       "  'output_type': 'error',\n",
-       "  'traceback': ['\\x1b[0;31m---------------------------------------------------------------------------\\x1b[0m',\n",
-       "   '\\x1b[0;31mException\\x1b[0m                                 Traceback (most recent call last)',\n",
-       "   'Input \\x1b[0;32mIn [1]\\x1b[0m, in \\x1b[0;36m<cell line: 1>\\x1b[0;34m()\\x1b[0m\\n\\x1b[0;32m----> 1\\x1b[0m \\x1b[38;5;28;01mraise\\x1b[39;00m \\x1b[38;5;167;01mException\\x1b[39;00m(\\x1b[38;5;124m\"\\x1b[39m\\x1b[38;5;124mOopsie!\\x1b[39m\\x1b[38;5;124m\"\\x1b[39m)\\n',\n",
-       "   '\\x1b[0;31mException\\x1b[0m: Oopsie!']}]"
+       "(#0) []"
       ]
      },
      "execution_count": null,
@@ -482,18 +489,61 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "got exception: Oopsie!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try: s.run_all(nb, exc_stop=True)\n",
     "except Exception as e: print(f\"got exception: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can pass a function to `preproc` to have it run on every cell. It can modify the cell as needed. If the function returns `True`, then that cell will not be executed. For instance, to skip the cell which raises an exception:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb = read_nb(clean)\n",
+    "s.run_all(nb, preproc=lambda c: 'raise' in c.source)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This cell will contain no output, since it was skipped."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(#0) []"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb.cells[-1].outputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also pass a function to `postproc` to modify a cell after it is executed."
    ]
   },
   {
@@ -504,11 +554,18 @@
    "source": [
     "#|export\n",
     "@patch\n",
-    "def execute(self:CaptureShell, src, dest, exc_stop=False):\n",
+    "def execute(self:CaptureShell, src, dest, exc_stop=False, preproc=noop, postproc=noop):\n",
     "    \"Execute notebook from `src` and save with outputs to `dest\"\n",
     "    nb = read_nb(src)\n",
-    "    self.run_all(nb, exc_stop=exc_stop)\n",
+    "    self.run_all(nb, exc_stop=exc_stop, preproc=preproc, postproc=postproc)\n",
     "    write_nb(nb, dest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a shortcut for the combination of `read_nb`, `run_all`, and `write_nb`."
    ]
   },
   {
@@ -529,6 +586,25 @@
     "    s.execute(clean, 'tmp.ipynb')\n",
     "    print(read_nb('tmp.ipynb').cells[1].outputs)\n",
     "finally: Path('tmp.ipynb').unlink()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## export -"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|hide\n",
+    "#|eval: false\n",
+    "from nbprocess.doclinks import nbprocess_export\n",
+    "nbprocess_export()"
    ]
   },
   {
