--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -26,14 +26,19 @@
    "outputs": [],
    "source": [
     "#|export\n",
+    "from __future__ import annotations\n",
     "from fastcore.utils import *\n",
+    "from fastcore.script import call_parse\n",
+    "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "from IPython.core.displayhook import DisplayHook\n",
     "from IPython.core.displaypub import DisplayPublisher\n",
     "from io import StringIO\n",
     "\n",
     "from execnb.fastshell import FastInteractiveShell\n",
-    "from execnb.nbio import *"
+    "from execnb.nbio import *\n",
+    "\n",
+    "from collections.abc import Callable"
    ]
   },
   {
@@ -192,8 +197,8 @@
        "  'execution_count': 1},\n",
        " {'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 1 us, sys: 0 ns, total: 1 us',\n",
-       "   'Wall time: 3.34 us']}]"
+       "  'text': ['CPU times: user 2 us, sys: 0 ns, total: 2 us',\n",
+       "   'Wall time: 5.25 us']}]"
       ]
      },
      "execution_count": null,
@@ -380,9 +385,19 @@
    "outputs": [],
    "source": [
     "#|export\n",
+    "def _false(o): return False\n",
+    "\n",
     "@patch\n",
-    "def run_all(self:CaptureShell, nb, exc_stop=False, preproc=noop, postproc=noop):\n",
+    "def run_all(self:CaptureShell,\n",
+    "            nb, # A notebook read with `nbclient` or `read_nb`\n",
+    "            exc_stop:bool=False, # Stop on exceptions?\n",
+    "            preproc:Callable=_false, # Called before each cell is executed\n",
+    "            postproc:Callable=_false, # Called after each cell is executed\n",
+    "            inject_code:str|None=None, # Code to inject into a cell\n",
+    "            inject_idx:int=0 # Cell to replace with `inject_code`\n",
+    "           ):\n",
     "    \"Run all cells in `nb`, stopping at first exception if `exc_stop`\"\n",
+    "    if inject_code is not None: nb.cells[inject_idx].source = inject_code\n",
     "    for cell in nb.cells:\n",
     "        if not preproc(cell):\n",
     "            self.cell(cell)\n",
@@ -418,7 +433,11 @@
     {
      "data": {
       "text/plain": [
-       "(#0) []"
+       "[{'data': {'text/plain': ['<IPython.core.display.Markdown object>'],\n",
+       "   'text/markdown': [\"This is *bold*. Here's a [link](https://www.fast.ai).\"]},\n",
+       "  'metadata': {},\n",
+       "  'output_type': 'execute_result',\n",
+       "  'execution_count': 5}]"
       ]
      },
      "execution_count": null,
@@ -466,7 +485,13 @@
     {
      "data": {
       "text/plain": [
-       "(#0) []"
+       "[{'ename': \"<class 'Exception'>\",\n",
+       "  'evalue': 'Oopsie!',\n",
+       "  'output_type': 'error',\n",
+       "  'traceback': ['\\x1b[0;31m---------------------------------------------------------------------------\\x1b[0m',\n",
+       "   '\\x1b[0;31mException\\x1b[0m                                 Traceback (most recent call last)',\n",
+       "   'Input \\x1b[0;32mIn [1]\\x1b[0m, in \\x1b[0;36m<cell line: 1>\\x1b[0;34m()\\x1b[0m\\n\\x1b[0;32m----> 1\\x1b[0m \\x1b[38;5;28;01mraise\\x1b[39;00m \\x1b[38;5;167;01mException\\x1b[39;00m(\\x1b[38;5;124m\"\\x1b[39m\\x1b[38;5;124mOopsie!\\x1b[39m\\x1b[38;5;124m\"\\x1b[39m)\\n',\n",
+       "   '\\x1b[0;31mException\\x1b[0m: Oopsie!']}]"
       ]
      },
      "execution_count": null,
@@ -489,7 +514,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "got exception: Oopsie!\n"
+     ]
+    }
+   ],
    "source": [
     "try: s.run_all(nb, exc_stop=True)\n",
     "except Exception as e: print(f\"got exception: {e}\")"
@@ -540,6 +573,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'data': {'text/plain': ['2']},\n",
+       "  'metadata': {},\n",
+       "  'output_type': 'execute_result',\n",
+       "  'execution_count': 10},\n",
+       " {'name': 'stdout', 'output_type': 'stream', 'text': ['1']}]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb.cells[1].outputs"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -554,10 +611,21 @@
    "source": [
     "#|export\n",
     "@patch\n",
-    "def execute(self:CaptureShell, src, dest, exc_stop=False, preproc=noop, postproc=noop):\n",
+    "def execute(self:CaptureShell,\n",
+    "            src:str|Path, # Notebook path to read from\n",
+    "            dest, # Notebook path to write to\n",
+    "            exc_stop:bool=False, # Stop on exceptions?\n",
+    "            preproc:Callable=_false, # Called before each cell is executed\n",
+    "            postproc:Callable=_false, # Called after each cell is executed\n",
+    "            inject_code:str|None=None, # Code to inject into a cell\n",
+    "            inject_path:str|Path|None=None, # Path to file containing code to inject into a cell\n",
+    "            inject_idx:int=0 # Cell to replace with `inject_code`\n",
+    "):\n",
     "    \"Execute notebook from `src` and save with outputs to `dest\"\n",
     "    nb = read_nb(src)\n",
-    "    self.run_all(nb, exc_stop=exc_stop, preproc=preproc, postproc=postproc)\n",
+    "    if inject_path is not None: inject_code = Path(inject_path).read_text()\n",
+    "    self.run_all(nb, exc_stop=exc_stop, preproc=preproc, postproc=postproc,\n",
+    "                 inject_code=inject_code, inject_idx=inject_idx)\n",
     "    write_nb(nb, dest)"
    ]
   },
@@ -577,7 +645,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'data': {'text/plain': ['2']}, 'execution_count': 10, 'metadata': {}, 'output_type': 'execute_result'}, {'name': 'stdout', 'output_type': 'stream', 'text': ['1']}]\n"
+      "[{'data': {'text/plain': ['2']}, 'execution_count': 13, 'metadata': {}, 'output_type': 'execute_result'}, {'name': 'stdout', 'output_type': 'stream', 'text': ['1']}]\n"
      ]
     }
    ],
@@ -586,6 +654,123 @@
     "    s.execute(clean, 'tmp.ipynb')\n",
     "    print(read_nb('tmp.ipynb').cells[1].outputs)\n",
     "finally: Path('tmp.ipynb').unlink()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Params -"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you pass `inject_code` to `CaptureShell.execute` or `CaptureShell.run_all`, the source of `nb.cells[inject_idx]` will be replaced with `inject_code`. By default, the first cell is replaced. For instance consider this notebook:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-  a=1\n",
+      "-  print(a)\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb = read_nb('../tests/params.ipynb')\n",
+    "for c in nb.cells: print('- ',c.source)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can replace the first cell with `a=2` by passing that as `inject_code`, and the notebook will run with that change:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'cell_type': 'code',\n",
+       "  'execution_count': 1,\n",
+       "  'id': 'a63ce885',\n",
+       "  'metadata': {},\n",
+       "  'outputs': (#0) [],\n",
+       "  'source': 'a=2',\n",
+       "  'idx_': 0},\n",
+       " {'cell_type': 'code',\n",
+       "  'execution_count': 2,\n",
+       "  'id': 'ea528db5',\n",
+       "  'metadata': {},\n",
+       "  'outputs': [{'name': 'stdout', 'output_type': 'stream', 'text': ['2']}],\n",
+       "  'source': 'print(a)',\n",
+       "  'idx_': 1}]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb = read_nb('../tests/params.ipynb')\n",
+    "s.run_all(nb, inject_code=\"a=2\")\n",
+    "list(nb.cells)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This can be used with `CaptureStream.execute` to parameterise runs of models in notebooks. Place any defaults for configuration code needed in the first cell, and then when running `execute` pass in new parameters as needed in `inject_code`. To replace only some of the defaults, leave an empty cell as the second cell, and inject code using `inject_idx=1` to replace the empty second cell with code that overrides some of the defaults set in the first cell. When using `execute` you can pass `inject_path` instead of `inject_code` to read the injected code from a file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## cli -"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|export\n",
+    "@call_parse\n",
+    "def exec_nb(\n",
+    "    src:str, # Notebook path to read from\n",
+    "    dest:str, # Notebook path to write to\n",
+    "    exc_stop:bool=False, # Stop on exceptions?\n",
+    "    inject_code:str=None, # Code to inject into a cell\n",
+    "    inject_path:str=None, # Path to file containing code to inject into a cell\n",
+    "    inject_idx:int=0 # Cell to replace with `inject_code`\n",
+    "):\n",
+    "    \"Execute notebook from `src` and save with outputs to `dest\"\n",
+    "    CaptureShell().execute(src, dest, exc_stop=exc_stop, inject_code=inject_code,\n",
+    "                           inject_path=inject_path, inject_idx=inject_idx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the command-line version of `CaptureShell.execute`. Run `exec_nb -h` from the command line to see how to pass arguments."
    ]
   },
   {
