--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -143,7 +143,10 @@
    "source": [
     "#|export\n",
     "@patch\n",
-    "def run(self:CaptureShell, code:str, stdout=True, stderr=True):\n",
+    "def run(self:CaptureShell,\n",
+    "        code:str, # Python/IPython code to run\n",
+    "        stdout=True, # Capture stdout and save as output?\n",
+    "        stderr=True): # Capture stderr and save as output?\n",
     "    \"runs `code`, returning a list of all outputs in Jupyter notebook format\"\n",
     "    self.exc = False\n",
     "    self.out.clear()\n",
@@ -198,7 +201,7 @@
        " {'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
        "  'text': ['CPU times: user 2 us, sys: 0 ns, total: 2 us',\n",
-       "   'Wall time: 5.25 us']}]"
+       "   'Wall time: 3.81 us']}]"
       ]
      },
      "execution_count": null,
@@ -613,7 +616,7 @@
     "@patch\n",
     "def execute(self:CaptureShell,\n",
     "            src:str|Path, # Notebook path to read from\n",
-    "            dest, # Notebook path to write to\n",
+    "            dest:str|None=None, # Notebook path to write to\n",
     "            exc_stop:bool=False, # Stop on exceptions?\n",
     "            preproc:Callable=_false, # Called before each cell is executed\n",
     "            postproc:Callable=_false, # Called after each cell is executed\n",
@@ -626,7 +629,7 @@
     "    if inject_path is not None: inject_code = Path(inject_path).read_text()\n",
     "    self.run_all(nb, exc_stop=exc_stop, preproc=preproc, postproc=postproc,\n",
     "                 inject_code=inject_code, inject_idx=inject_idx)\n",
-    "    write_nb(nb, dest)"
+    "    if dest: write_nb(nb, dest)"
    ]
   },
   {
@@ -755,7 +758,7 @@
     "@call_parse\n",
     "def exec_nb(\n",
     "    src:str, # Notebook path to read from\n",
-    "    dest:str, # Notebook path to write to\n",
+    "    dest:str='', # Notebook path to write to\n",
     "    exc_stop:bool=False, # Stop on exceptions?\n",
     "    inject_code:str=None, # Code to inject into a cell\n",
     "    inject_path:str=None, # Path to file containing code to inject into a cell\n",
@@ -770,7 +773,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the command-line version of `CaptureShell.execute`. Run `exec_nb -h` from the command line to see how to pass arguments."
+    "This is the command-line version of `CaptureShell.execute`. Run `exec_nb -h` from the command line to see how to pass arguments. If you don't pass `dest` then the output notebook won't be saved; this is mainly useful for running tests."
    ]
   },
   {
