--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -94,7 +94,7 @@
     "    def __init__(self):\n",
     "        super().__init__(displayhook_class=_CaptureHook, display_pub_class=_CapturePub)\n",
     "        InteractiveShell._instance = self\n",
-    "        self.result,self.out,self.count = None,[],1\n",
+    "        self.exc,self.result,self.out,self.count = None,None,[],1\n",
     "        self.run_cell('%matplotlib inline')\n",
     "\n",
     "    def enable_gui(self, gui=None): pass\n",
