add to pythonpath

--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -97,7 +97,13 @@
     "        self.exc,self.result,self.out,self.count = None,None,[],1\n",
     "        self.run_cell('%matplotlib inline')\n",
     "\n",
-    "    def enable_gui(self, gui=None): pass\n",
+    "    def set_path(self, path):\n",
+    "        \"Add `path` to python path\"\n",
+    "        self.run_cell(f\"import sys; sys.path.insert(0, {str(path)})\")\n",
+    "\n",
+    "    def enable_gui(self, gui=None):\n",
+    "        \"Disable GUI (over-ridden; called by IPython)\"\n",
+    "        pass\n",
     "\n",
     "    def _showtraceback(self, etype, evalue, stb: str):\n",
     "        self.out.append(_out_exc(etype, evalue, stb))\n",
@@ -200,8 +206,8 @@
        "  'execution_count': 1},\n",
        " {'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 2 us, sys: 0 ns, total: 2 us',\n",
-       "   'Wall time: 3.81 us']}]"
+       "  'text': ['CPU times: user 3 us, sys: 1 us, total: 4 us',\n",
+       "   'Wall time: 5.25 us']}]"
       ]
      },
      "execution_count": null,
@@ -532,6 +538,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb = read_nb('../../testw/index.ipynb')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -626,10 +641,20 @@
     "):\n",
     "    \"Execute notebook from `src` and save with outputs to `dest\"\n",
     "    nb = read_nb(src)\n",
+    "    self.set_path(Path(src).parent.resolve())\n",
     "    if inject_path is not None: inject_code = Path(inject_path).read_text()\n",
     "    self.run_all(nb, exc_stop=exc_stop, preproc=preproc, postproc=postproc,\n",
     "                 inject_code=inject_code, inject_idx=inject_idx)\n",
     "    if dest: write_nb(nb, dest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.execute(clean, '../../testw/index.ipynb')"
    ]
   },
   {
