--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -99,7 +99,7 @@
     "\n",
     "    def set_path(self, path):\n",
     "        \"Add `path` to python path\"\n",
-    "        self.run_cell(f\"import sys; sys.path.insert(0, {str(path)})\")\n",
+    "        self.run_cell(f\"import sys; sys.path.insert(0, '{str(path)}')\")\n",
     "\n",
     "    def enable_gui(self, gui=None):\n",
     "        \"Disable GUI (over-ridden; called by IPython)\"\n",
@@ -206,8 +206,8 @@
        "  'execution_count': 1},\n",
        " {'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 3 us, sys: 1 us, total: 4 us',\n",
-       "   'Wall time: 5.25 us']}]"
+       "  'text': ['CPU times: user 2 us, sys: 0 ns, total: 2 us',\n",
+       "   'Wall time: 4.77 us']}]"
       ]
      },
      "execution_count": null,
@@ -673,7 +673,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'data': {'text/plain': ['2']}, 'execution_count': 13, 'metadata': {}, 'output_type': 'execute_result'}, {'name': 'stdout', 'output_type': 'stream', 'text': ['1']}]\n"
+      "[{'data': {'text/plain': ['2']}, 'execution_count': 16, 'metadata': {}, 'output_type': 'execute_result'}, {'name': 'stdout', 'output_type': 'stream', 'text': ['1']}]\n"
      ]
     }
    ],
