--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -96,7 +96,9 @@
     "        InteractiveShell._instance = self\n",
     "        self.exc,self.result,self.out,self.count = None,None,[],1\n",
     "        self.run_cell('%matplotlib inline')\n",
-    "\n",
+    "        self._fname = None\n",
+    "        self._cell_idx = None\n",
+    "        \n",
     "    def set_path(self, path):\n",
     "        \"Add `path` to python path\"\n",
     "        self.run_cell(f\"import sys; sys.path.insert(0, '{str(path)}')\")\n",
@@ -104,7 +106,16 @@
     "    def enable_gui(self, gui=None):\n",
     "        \"Disable GUI (over-ridden; called by IPython)\"\n",
     "        pass\n",
-    "\n",
+    "    \n",
+    "    @property\n",
+    "    def prettyerr(self):\n",
+    "        _fence = '='*75\n",
+    "        cell_intro_str = f\"While Executing Cell #{self._cell_idx}:\" if self._cell_idx else \"While Executing:\"\n",
+    "        cell_str = f\"\\n{cell_intro_str}\\n{self.exc[-1]}\"\n",
+    "        fname_str = f' in {self._fname}' if self._fname else ''\n",
+    "        return f\"{type(self.exc[1]).__name__}{fname_str}:\\n{_fence}\\n{cell_str}\\n\"\n",
+    "    \n",
+    "    \n",
     "    def _showtraceback(self, etype, evalue, stb: str):\n",
     "        self.out.append(_out_exc(etype, evalue, stb))\n",
     "        self.exc = (etype, evalue, '\\n'.join(stb))\n",
@@ -154,6 +165,7 @@
     "        stdout=True, # Capture stdout and save as output?\n",
     "        stderr=True): # Capture stderr and save as output?\n",
     "    \"runs `code`, returning a list of all outputs in Jupyter notebook format\"\n",
+    "    self._code = code\n",
     "    self.exc = False\n",
     "    self.out.clear()\n",
     "    self.sys_stdout,self.sys_stderr = sys.stdout,sys.stderr\n",
@@ -207,7 +219,7 @@
        " {'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
        "  'text': ['CPU times: user 2 us, sys: 0 ns, total: 2 us',\n",
-       "   'Wall time: 4.77 us']}]"
+       "   'Wall time: 4.05 us']}]"
       ]
      },
      "execution_count": null,
@@ -286,9 +298,9 @@
      "text": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)\n",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOops\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\n",
+      "\u001b[0;32m<ipython-input-1-01648acb07bd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Oops\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
       "\u001b[0;31mException\u001b[0m: Oops\n"
      ]
     }
@@ -308,6 +320,7 @@
     "def cell(self:CaptureShell, cell, stdout=True, stderr=True):\n",
     "    \"Run `cell`, skipping if not code, and store outputs back in cell\"\n",
     "    if cell.cell_type!='code': return\n",
+    "    self._cell_idx = cell.idx_ + 1\n",
     "    outs = self.run(cell.source)\n",
     "    if outs:\n",
     "        cell.outputs = outs\n",
@@ -499,7 +512,7 @@
        "  'output_type': 'error',\n",
        "  'traceback': ['\\x1b[0;31m---------------------------------------------------------------------------\\x1b[0m',\n",
        "   '\\x1b[0;31mException\\x1b[0m                                 Traceback (most recent call last)',\n",
-       "   'Input \\x1b[0;32mIn [1]\\x1b[0m, in \\x1b[0;36m<cell line: 1>\\x1b[0;34m()\\x1b[0m\\n\\x1b[0;32m----> 1\\x1b[0m \\x1b[38;5;28;01mraise\\x1b[39;00m \\x1b[38;5;167;01mException\\x1b[39;00m(\\x1b[38;5;124m\"\\x1b[39m\\x1b[38;5;124mOopsie!\\x1b[39m\\x1b[38;5;124m\"\\x1b[39m)\\n',\n",
+       "   '\\x1b[0;32m<ipython-input-1-1c97c1d317ab>\\x1b[0m in \\x1b[0;36m<module>\\x1b[0;34m\\x1b[0m\\n\\x1b[0;32m----> 1\\x1b[0;31m \\x1b[0;32mraise\\x1b[0m \\x1b[0mException\\x1b[0m\\x1b[0;34m(\\x1b[0m\\x1b[0;34m\"Oopsie!\"\\x1b[0m\\x1b[0;34m)\\x1b[0m\\x1b[0;34m\\x1b[0m\\x1b[0;34m\\x1b[0m\\x1b[0m\\n\\x1b[0m',\n",
        "   '\\x1b[0;31mException\\x1b[0m: Oopsie!']}]"
       ]
      },
@@ -535,15 +548,6 @@
    "source": [
     "try: s.run_all(nb, exc_stop=True)\n",
     "except Exception as e: print(f\"got exception: {e}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nb = read_nb('../../testw/index.ipynb')"
    ]
   },
   {
@@ -641,20 +645,12 @@
     "):\n",
     "    \"Execute notebook from `src` and save with outputs to `dest\"\n",
     "    nb = read_nb(src)\n",
+    "    self._fname = src\n",
     "    self.set_path(Path(src).parent.resolve())\n",
     "    if inject_path is not None: inject_code = Path(inject_path).read_text()\n",
     "    self.run_all(nb, exc_stop=exc_stop, preproc=preproc, postproc=postproc,\n",
     "                 inject_code=inject_code, inject_idx=inject_idx)\n",
     "    if dest: write_nb(nb, dest)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s.execute(clean, '../../testw/index.ipynb')"
    ]
   },
   {
@@ -673,15 +669,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'data': {'text/plain': ['2']}, 'execution_count': 16, 'metadata': {}, 'output_type': 'execute_result'}, {'name': 'stdout', 'output_type': 'stream', 'text': ['1']}]\n"
+      "[{'data': {'text/plain': ['2']}, 'execution_count': 2, 'metadata': {}, 'output_type': 'execute_result'}, {'name': 'stdout', 'output_type': 'stream', 'text': ['1']}]\n"
      ]
     }
    ],
    "source": [
+    "s = CaptureShell()\n",
     "try:\n",
     "    s.execute(clean, 'tmp.ipynb')\n",
     "    print(read_nb('tmp.ipynb').cells[1].outputs)\n",
     "finally: Path('tmp.ipynb').unlink()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pretty Tracebacks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If an error occurs while running a notebook, you can retrieve a pretty version of the error with the `prettyerr` property: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AssertionError in ../tests/error.ipynb:\n",
+      "===========================================================================\n",
+      "\n",
+      "While Executing Cell #2:\n",
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)\n",
+      "\u001b[0;32m<ipython-input-1-b968a57a586e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[1;32m      1\u001b[0m \u001b[0;31m# some comments\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'hello'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m----> 3\u001b[0;31m \u001b[0mfoo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
+      "\u001b[0;32m~/github/execnb/tests/err.py\u001b[0m in \u001b[0;36mfoo\u001b[0;34m()\u001b[0m\n",
+      "\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mfoo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0;36m13\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m98\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = CaptureShell()\n",
+    "try:\n",
+    "    s.execute('../tests/error.ipynb', exc_stop=True)\n",
+    "except:\n",
+    "    print(s.prettyerr)"
    ]
   },
   {
@@ -733,14 +781,14 @@
      "data": {
       "text/plain": [
        "[{'cell_type': 'code',\n",
-       "  'execution_count': 1,\n",
+       "  'execution_count': None,\n",
        "  'id': 'a63ce885',\n",
        "  'metadata': {},\n",
        "  'outputs': (#0) [],\n",
        "  'source': 'a=2',\n",
        "  'idx_': 0},\n",
        " {'cell_type': 'code',\n",
-       "  'execution_count': 2,\n",
+       "  'execution_count': None,\n",
        "  'id': 'ea528db5',\n",
        "  'metadata': {},\n",
        "  'outputs': [{'name': 'stdout', 'output_type': 'stream', 'text': ['2']}],\n",
