make pretty tb a method

--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -107,12 +107,12 @@
     "        \"Disable GUI (over-ridden; called by IPython)\"\n",
     "        pass\n",
     "    \n",
-    "    @property\n",
-    "    def prettyerr(self):\n",
+    "    def prettytb(self, fname=None):\n",
+    "        fname = fname if fname else self._fname\n",
     "        _fence = '='*75\n",
     "        cell_intro_str = f\"While Executing Cell #{self._cell_idx}:\" if self._cell_idx else \"While Executing:\"\n",
     "        cell_str = f\"\\n{cell_intro_str}\\n{self.exc[-1]}\"\n",
-    "        fname_str = f' in {self._fname}' if self._fname else ''\n",
+    "        fname_str = f' in {fname}' if fname else ''\n",
     "        return f\"{type(self.exc[1]).__name__}{fname_str}:\\n{_fence}\\n{cell_str}\\n\"\n",
     "    \n",
     "    \n",
@@ -692,7 +692,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If an error occurs while running a notebook, you can retrieve a pretty version of the error with the `prettyerr` property: "
+    "If an error occurs while running a notebook, you can retrieve a pretty version of the error with the `prettytb` method: "
    ]
   },
   {
@@ -729,7 +729,7 @@
     "try:\n",
     "    s.execute('../tests/error.ipynb', exc_stop=True)\n",
     "except:\n",
-    "    print(s.prettyerr)"
+    "    print(s.prettytb())"
    ]
   },
   {
@@ -750,16 +750,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-  a=1\n",
-      "-  print(a)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nb = read_nb('../tests/params.ipynb')\n",
     "for c in nb.cells: print('- ',c.source)"
@@ -776,31 +767,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'cell_type': 'code',\n",
-       "  'execution_count': None,\n",
-       "  'id': 'a63ce885',\n",
-       "  'metadata': {},\n",
-       "  'outputs': (#0) [],\n",
-       "  'source': 'a=2',\n",
-       "  'idx_': 0},\n",
-       " {'cell_type': 'code',\n",
-       "  'execution_count': None,\n",
-       "  'id': 'ea528db5',\n",
-       "  'metadata': {},\n",
-       "  'outputs': [{'name': 'stdout', 'output_type': 'stream', 'text': ['2']}],\n",
-       "  'source': 'print(a)',\n",
-       "  'idx_': 1}]"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nb = read_nb('../tests/params.ipynb')\n",
     "s.run_all(nb, inject_code=\"a=2\")\n",
