--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -219,7 +219,7 @@
        " {'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
        "  'text': ['CPU times: user 2 us, sys: 0 ns, total: 2 us',\n",
-       "   'Wall time: 4.05 us']}]"
+       "   'Wall time: 4.29 us']}]"
       ]
      },
      "execution_count": null,
@@ -750,7 +750,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-  a=1\n",
+      "-  print(a)\n"
+     ]
+    }
+   ],
    "source": [
     "nb = read_nb('../tests/params.ipynb')\n",
     "for c in nb.cells: print('- ',c.source)"
@@ -767,7 +776,31 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'cell_type': 'code',\n",
+       "  'execution_count': None,\n",
+       "  'id': 'a63ce885',\n",
+       "  'metadata': {},\n",
+       "  'outputs': (#0) [],\n",
+       "  'source': 'a=2',\n",
+       "  'idx_': 0},\n",
+       " {'cell_type': 'code',\n",
+       "  'execution_count': None,\n",
+       "  'id': 'ea528db5',\n",
+       "  'metadata': {},\n",
+       "  'outputs': [{'name': 'stdout', 'output_type': 'stream', 'text': ['2']}],\n",
+       "  'source': 'print(a)',\n",
+       "  'idx_': 1}]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nb = read_nb('../tests/params.ipynb')\n",
     "s.run_all(nb, inject_code=\"a=2\")\n",
