--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -107,7 +107,10 @@
     "        \"Disable GUI (over-ridden; called by IPython)\"\n",
     "        pass\n",
     "    \n",
-    "    def prettytb(self, fname=None):\n",
+    "    def prettytb(self, \n",
+    "                 fname:str|Path=None # filename to print alongside the traceback\n",
+    "                ):\n",
+    "        \"Show a pretty traceback for notebooks, optionally printing `fname`.\"\n",
     "        fname = fname if fname else self._fname\n",
     "        _fence = '='*75\n",
     "        cell_intro_str = f\"While Executing Cell #{self._cell_idx}:\" if self._cell_idx else \"While Executing:\"\n",
