--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -685,6 +685,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#|export\n",
     "@patch\n",
     "def prettytb(self:CaptureShell, \n",
     "             fname:str|Path=None # filename to print alongside the traceback\n",
