--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -85,14 +85,7 @@
       "text/plain": [
        "{'kernelspec': {'display_name': 'Python 3 (ipykernel)',\n",
        "  'language': 'python',\n",
-       "  'name': 'python3'},\n",
-       " 'language_info': {'codemirror_mode': {'name': 'ipython', 'version': 3},\n",
-       "  'file_extension': '.py',\n",
-       "  'mimetype': 'text/x-python',\n",
-       "  'name': 'python',\n",
-       "  'nbconvert_exporter': 'python',\n",
-       "  'pygments_lexer': 'ipython3',\n",
-       "  'version': '3.9.7'}}"
+       "  'name': 'python3'}}"
       ]
      },
      "execution_count": null,
@@ -123,10 +116,10 @@
        "  'metadata': {},\n",
        "  'source': ['## A minimal notebook']},\n",
        " {'cell_type': 'code',\n",
-       "  'execution_count': 1,\n",
+       "  'execution_count': None,\n",
        "  'metadata': {},\n",
        "  'outputs': [{'data': {'text/plain': ['2']},\n",
-       "    'execution_count': 1,\n",
+       "    'execution_count': None,\n",
        "    'metadata': {},\n",
        "    'output_type': 'execute_result'}],\n",
        "  'source': ['# Do some arithmetic\\n', '1+1']}]"
@@ -212,18 +205,18 @@
       "text/markdown": [
        "```json\n",
        "{ 'cell_type': 'code',\n",
-       "  'execution_count': 1,\n",
+       "  'execution_count': None,\n",
        "  'idx_': 1,\n",
        "  'metadata': {},\n",
-       "  'outputs': [{'data': {'text/plain': ['2']}, 'execution_count': 1, 'metadata': {}, 'output_type': 'execute_result'}],\n",
+       "  'outputs': [{'data': {'text/plain': ['2']}, 'execution_count': None, 'metadata': {}, 'output_type': 'execute_result'}],\n",
        "  'source': '# Do some arithmetic\\n1+1'}\n",
        "```"
       ],
       "text/plain": [
        "{'cell_type': 'code',\n",
-       " 'execution_count': 1,\n",
+       " 'execution_count': None,\n",
        " 'metadata': {},\n",
-       " 'outputs': (#1) [{'data': {'text/plain': ['2']}, 'execution_count': 1, 'metadata': {}, 'output_type': 'execute_result'}],\n",
+       " 'outputs': (#1) [{'data': {'text/plain': ['2']}, 'execution_count': None, 'metadata': {}, 'output_type': 'execute_result'}],\n",
        " 'source': '# Do some arithmetic\\n1+1',\n",
        " 'idx_': 1}"
       ]
@@ -254,7 +247,7 @@
     {
      "data": {
       "text/plain": [
-       "([<ast.Expr at 0x7f4f64408d90>], <ast.Add at 0x7f4fa04e3040>)"
+       "([<ast.Expr at 0x7f282d23aca0>], <ast.Add at 0x7f2869327100>)"
       ]
      },
      "execution_count": null,
@@ -275,7 +268,9 @@
     "#|export\n",
     "def read_nb(path):\n",
     "    \"Return notebook at `path`\"\n",
-    "    return dict2nb(Path(path).read_json())"
+    "    res = dict2nb(Path(path).read_json())\n",
+    "    res['path_'] = str(path)\n",
+    "    return res"
    ]
   },
   {
@@ -304,6 +299,33 @@
    "source": [
     "minimal = read_nb(minimal_fn)\n",
     "str(minimal.cells[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The file name read is stored in `path_`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../tests/minimal.ipynb'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "minimal.path_"
    ]
   },
   {
