--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -28,7 +28,8 @@
     "#|export\n",
     "from fastcore.imports import *\n",
     "from fastcore.foundation import *\n",
-    "from fastcore.utils import *\n",
+    "from fastcore.basics import *\n",
+    "from fastcore.xtras import *\n",
     "\n",
     "import ast,functools,json\n",
     "from pprint import pformat,pprint"
@@ -247,7 +248,7 @@
     {
      "data": {
       "text/plain": [
-       "([<ast.Expr at 0x7f282d23aca0>], <ast.Add at 0x7f2869327100>)"
+       "([<ast.Expr at 0x7f5f8c2d5af0>], <ast.Add at 0x7f5fa1815100>)"
       ]
      },
      "execution_count": null,
