--- a/nbs/02_shell.ipynb
+++ b/nbs/02_shell.ipynb
@@ -27,7 +27,8 @@
    "source": [
     "#|export\n",
     "from __future__ import annotations\n",
-    "from fastcore.utils import *\n",
+    "from fastcore.basics import *\n",
+    "from fastcore.imports import *\n",
     "from fastcore.script import call_parse\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
@@ -212,8 +213,8 @@
        "  'execution_count': 1},\n",
        " {'name': 'stdout',\n",
        "  'output_type': 'stream',\n",
-       "  'text': ['CPU times: user 4 us, sys: 1e+03 ns, total: 5 us',\n",
-       "   'Wall time: 8.82 us']}]"
+       "  'text': ['CPU times: user 1e+03 ns, sys: 0 ns, total: 1e+03 ns',\n",
+       "   'Wall time: 3.34 us']}]"
       ]
      },
      "execution_count": null,
