--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -86,7 +86,14 @@
       "text/plain": [
        "{'kernelspec': {'display_name': 'Python 3 (ipykernel)',\n",
        "  'language': 'python',\n",
-       "  'name': 'python3'}}"
+       "  'name': 'python3'},\n",
+       " 'language_info': {'codemirror_mode': {'name': 'ipython', 'version': 3},\n",
+       "  'file_extension': '.py',\n",
+       "  'mimetype': 'text/x-python',\n",
+       "  'name': 'python',\n",
+       "  'nbconvert_exporter': 'python',\n",
+       "  'pygments_lexer': 'ipython3',\n",
+       "  'version': '3.9.7'}}"
       ]
      },
      "execution_count": null,
@@ -117,13 +124,26 @@
        "  'metadata': {},\n",
        "  'source': ['## A minimal notebook']},\n",
        " {'cell_type': 'code',\n",
-       "  'execution_count': None,\n",
+       "  'execution_count': 1,\n",
        "  'metadata': {},\n",
        "  'outputs': [{'data': {'text/plain': ['2']},\n",
-       "    'execution_count': None,\n",
+       "    'execution_count': 1,\n",
        "    'metadata': {},\n",
        "    'output_type': 'execute_result'}],\n",
-       "  'source': ['# Do some arithmetic\\n', '1+1']}]"
+       "  'source': ['# Do some arithmetic\\n', '1+1']},\n",
+       " {'cell_type': 'code',\n",
+       "  'execution_count': 5,\n",
+       "  'metadata': {},\n",
+       "  'outputs': [{'data': {'text/plain': [\"['hello']\"]},\n",
+       "    'execution_count': 5,\n",
+       "    'metadata': {},\n",
+       "    'output_type': 'execute_result'}],\n",
+       "  'source': ['foo = !echo hello\\n', 'foo']},\n",
+       " {'cell_type': 'code',\n",
+       "  'execution_count': None,\n",
+       "  'metadata': {},\n",
+       "  'outputs': [],\n",
+       "  'source': []}]"
       ]
      },
      "execution_count": null,
@@ -160,8 +180,10 @@
     "        if '_parsed_' in self: del(self['_parsed_'])\n",
     "\n",
     "    def parsed_(self):\n",
-    "        if self.cell_type!='code' or self.source[:1]=='%': return\n",
-    "        if '_parsed_' not in self: self._parsed_ = ast.parse(self.source).body\n",
+    "        if self.cell_type!='code' or self.source[:1].strip() in ['%', '!']: return\n",
+    "        if '_parsed_' not in self: \n",
+    "            try: self._parsed_ = ast.parse(self.source).body\n",
+    "            except SyntaxError: return # you can assign the result of ! to a variable in a notebook cell, which will result in a syntax error if parsed with the ast module.\n",
     "        return self._parsed_\n",
     "\n",
     "    def __hash__(self): return hash(self.source) + hash(self.cell_type)\n",
@@ -206,18 +228,18 @@
       "text/markdown": [
        "```json\n",
        "{ 'cell_type': 'code',\n",
-       "  'execution_count': None,\n",
+       "  'execution_count': 1,\n",
        "  'idx_': 1,\n",
        "  'metadata': {},\n",
-       "  'outputs': [{'data': {'text/plain': ['2']}, 'execution_count': None, 'metadata': {}, 'output_type': 'execute_result'}],\n",
+       "  'outputs': [{'data': {'text/plain': ['2']}, 'execution_count': 1, 'metadata': {}, 'output_type': 'execute_result'}],\n",
        "  'source': '# Do some arithmetic\\n1+1'}\n",
        "```"
       ],
       "text/plain": [
        "{'cell_type': 'code',\n",
-       " 'execution_count': None,\n",
+       " 'execution_count': 1,\n",
        " 'metadata': {},\n",
-       " 'outputs': (#1) [{'data': {'text/plain': ['2']}, 'execution_count': None, 'metadata': {}, 'output_type': 'execute_result'}],\n",
+       " 'outputs': (#1) [{'data': {'text/plain': ['2']}, 'execution_count': 1, 'metadata': {}, 'output_type': 'execute_result'}],\n",
        " 'source': '# Do some arithmetic\\n1+1',\n",
        " 'idx_': 1}"
       ]
@@ -248,7 +270,7 @@
     {
      "data": {
       "text/plain": [
-       "([<ast.Expr at 0x7f5f8c2d5af0>], <ast.Add at 0x7f5fa1815100>)"
+       "([<ast.Expr at 0x7f98d80ffbb0>], <ast.Add at 0x7f99082e0af0>)"
       ]
      },
      "execution_count": null,
