--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -132,14 +132,6 @@
        "    'output_type': 'execute_result'}],\n",
        "  'source': ['# Do some arithmetic\\n', '1+1']},\n",
        " {'cell_type': 'code',\n",
-       "  'execution_count': 5,\n",
-       "  'metadata': {},\n",
-       "  'outputs': [{'data': {'text/plain': [\"['hello']\"]},\n",
-       "    'execution_count': 5,\n",
-       "    'metadata': {},\n",
-       "    'output_type': 'execute_result'}],\n",
-       "  'source': ['foo = !echo hello\\n', 'foo']},\n",
-       " {'cell_type': 'code',\n",
        "  'execution_count': None,\n",
        "  'metadata': {},\n",
        "  'outputs': [],\n",
@@ -270,7 +262,7 @@
     {
      "data": {
       "text/plain": [
-       "([<ast.Expr at 0x7f98d80ffbb0>], <ast.Add at 0x7f99082e0af0>)"
+       "([<ast.Expr at 0x7f9a980d4b20>], <ast.Add at 0x7f9ad8258af0>)"
       ]
      },
      "execution_count": null,
