--- a/nbs/01_nbio.ipynb
+++ b/nbs/01_nbio.ipynb
@@ -80,27 +80,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'kernelspec': {'display_name': 'Python 3 (ipykernel)',\n",
-       "  'language': 'python',\n",
-       "  'name': 'python3'},\n",
-       " 'language_info': {'codemirror_mode': {'name': 'ipython', 'version': 3},\n",
-       "  'file_extension': '.py',\n",
-       "  'mimetype': 'text/x-python',\n",
-       "  'name': 'python',\n",
-       "  'nbconvert_exporter': 'python',\n",
-       "  'pygments_lexer': 'ipython3',\n",
-       "  'version': '3.9.7'}}"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "minimal_txt.metadata"
    ]
@@ -116,33 +96,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'cell_type': 'markdown',\n",
-       "  'metadata': {},\n",
-       "  'source': ['## A minimal notebook']},\n",
-       " {'cell_type': 'code',\n",
-       "  'execution_count': 1,\n",
-       "  'metadata': {},\n",
-       "  'outputs': [{'data': {'text/plain': ['2']},\n",
-       "    'execution_count': 1,\n",
-       "    'metadata': {},\n",
-       "    'output_type': 'execute_result'}],\n",
-       "  'source': ['# Do some arithmetic\\n', '1+1']},\n",
-       " {'cell_type': 'code',\n",
-       "  'execution_count': None,\n",
-       "  'metadata': {},\n",
-       "  'outputs': [],\n",
-       "  'source': []}]"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "minimal_txt.cells"
    ]
@@ -214,33 +168,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "```json\n",
-       "{ 'cell_type': 'code',\n",
-       "  'execution_count': 1,\n",
-       "  'idx_': 1,\n",
-       "  'metadata': {},\n",
-       "  'outputs': [{'data': {'text/plain': ['2']}, 'execution_count': 1, 'metadata': {}, 'output_type': 'execute_result'}],\n",
-       "  'source': '# Do some arithmetic\\n1+1'}\n",
-       "```"
-      ],
-      "text/plain": [
-       "{'cell_type': 'code',\n",
-       " 'execution_count': 1,\n",
-       " 'metadata': {},\n",
-       " 'outputs': (#1) [{'data': {'text/plain': ['2']}, 'execution_count': 1, 'metadata': {}, 'output_type': 'execute_result'}],\n",
-       " 'source': '# Do some arithmetic\\n1+1',\n",
-       " 'idx_': 1}"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "minimal = dict2nb(minimal_txt)\n",
     "cell = minimal.cells[1]\n",
@@ -258,18 +186,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([<ast.Expr at 0x7f9a980d4b20>], <ast.Add at 0x7f9ad8258af0>)"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cell.parsed_(), cell.parsed_()[0].value.op"
    ]
@@ -299,18 +216,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"{'cell_type': 'markdown', 'metadata': {}, 'source': '## A minimal notebook', 'idx_': 0}\""
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "minimal = read_nb(minimal_fn)\n",
     "str(minimal.cells[0])"
@@ -327,18 +233,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'../tests/minimal.ipynb'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "minimal.path_"
    ]
@@ -409,18 +304,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      " \"cells\": [\n",
-      "  {\n",
-      "   \"cell_type\": \"markdown\",\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(nb2str(minimal)[:45])"
    ]
@@ -490,6 +374,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
